--- a/README.Rmd
+++ b/README.Rmd
@@ -11,39 +11,39 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-",
   out.width = "100%"
 )
+
+library(tidyverse)
+library(ggmedsl)
 ```
 # ggmedsl
 
-The goal of ggmedsl is to ...
+The goal of `ggmedsl` is to make the creation of MEDSL-themed plots seamless using `ggplot2` and a few functions. 
 
 ## Installation
 
-You can install the released version of ggmedsl from [CRAN](https://CRAN.R-project.org) with:
+You can install the latest version of `ggmedsl` from GitHub using `devtools`:
 
 ``` r
-install.packages("ggmedsl")
+devtools::install_github("medsl/ggmedsl")
 ```
 
-## Example
+## Examples
 
-This is a basic example which shows you how to solve a common problem:
+The first function within `ggmedsl` is `medsl_plot`. This quickly formats a `ggplot2` object to render in MEDSL formatting. 
 
-```{r example}
-## basic example code
+```{r example 1}
+mtcars %>% 
+  ggplot(aes(mpg, disp, color=factor(carb))) +
+  geom_point(size=3) +
+  medsl_plot()
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+I have also created a number of color scales that follow the MEDSL color theme, `scale_color_medsl()`: 
 
-```{r cars}
-summary(cars)
+```{r example 2, eval=FALSE, include=FALSE}
+mtcars %>% 
+  ggplot(aes(mpg, disp, color=factor(carb))) +
+  geom_point(size=3) +
+  medsl_plot() + scale_color_medsl()
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
