--- a/README.Rmd
+++ b/README.Rmd
@@ -31,16 +31,16 @@ devtools::install_github("medsl/ggmedsl")
 
 The first function within `ggmedsl` is `medsl_plot`. This quickly formats a `ggplot2` object to render in MEDSL formatting. 
 
-```{r example 1}
+```{r example 1, fig.height=6, fig.width=6}
 mtcars %>% 
-  ggplot(aes(mpg, disp, color=factor(carb))) +
-  geom_point(size=3) +
+  ggplot(aes(mpg, disp, color = factor(carb))) +
+  geom_point(size = 3) +
   medsl_plot()
 ```
 
 I have also created a number of color scales that follow the MEDSL color theme, `scale_color_medsl()`: 
 
-```{r example 2, eval=FALSE, include=FALSE}
+```{r example 2, eval=FALSE, fig.height=6, fig.width=6, include=FALSE}
 mtcars %>% 
   ggplot(aes(mpg, disp, color=factor(carb))) +
   geom_point(size=3) +
