--- a/README.Rmd
+++ b/README.Rmd
@@ -2,12 +2,12 @@
 output: github_document
 ---
 
-<!-- README.md is generated from README.Rmd. Please edit that file -->
-
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
+  dpi=300,
+  fig.width=7,
   fig.path = "man/figures/README-",
   out.width = "100%"
 )
