--- a/vignettes/index.Rmd
+++ b/vignettes/index.Rmd
@@ -4,13 +4,13 @@ author: "Cameron Wimpy"
 date: "`r Sys.Date()`"
 output:  
   html_document:
-    toc: true
+    toc: yes
     toc_depth: 4
-    toc_float: true
+    toc_float: yes
 vignette: >
-  %\VignetteEngine{knitr::knitr}
   %\VignetteIndexEntry{Title of your vignette}
   %\usepackage[UTF-8]{inputenc}
+  %\VignetteEngine{knitr::knitr}
 ---
 
 ```{r setup, include = FALSE}
