--- a/vignettes/ggmedsl.Rmd
+++ b/vignettes/ggmedsl.Rmd
@@ -4,13 +4,13 @@ author: "Cameron Wimpy"
 date: "`r Sys.Date()`"
 output:  
   html_document:
-    toc: yes
+    toc: true
     toc_depth: 4
-    toc_float: yes
+    toc_float: true
 vignette: >
+  %\VignetteEngine{knitr::knitr}
   %\VignetteIndexEntry{Title of your vignette}
   %\usepackage[UTF-8]{inputenc}
-  %\VignetteEngine{knitr::knitr}
 ---
 
 ```{r setup, include = FALSE}
